# Parallel-PDE-solvers

./: README.md  functions.cpp  functions.h  mpiDiffusionConvection.cpp  openmpDiffusionConvection.cpp  postProcessorDiffusionConvection.py  serialDiffusionConvection.cpp  threadDiffusionConvection.cpp
1D/: energy_error.csv  grapher.py  iterations.csv  mpi1DPDE.cpp  mpi1DPDEadapt.cpp  omp1DPDE.cpp  omp1DPDEadapt.cpp  out  output.csv  postProcessor.py  postProcessorAdaptive.py  testMPI.py  testOMP.py
1DPDE/: dataFile.csv  functions.cpp  functions.h  functionsMPI.cpp  functionsMPI.h  mpiDiffusionConvection.cpp  mpiDiffusionConvection2.cpp  openmpDiffusionConvection.cpp  openmpDiffusionConvectionAuto.cpp  openmpDiffusionConvectionDomainDec.cpp  out  resultsFile.csv  serialDiffusionConvection.cpp  test.py  testEnergy.py  testScalability.py  threadDiffusionConvection.cpp
2D/: iterations.csv  mpi2DPDE.cpp  omp2DPDE.cpp  out  postProcessor.py  test.py  testMPI.py  testOMP.py
2DPDE/: functions.cpp  functions.h  openmpDiffusionConvection.cpp  out  postProcessor.py  serialDiffusionConvection.cpp  threadDiffusionConvection.cpp
FEM_CODE/: include_deal.h
OTHER_CODES_FEM/elasticProblem/: CMakeLists.txt  include_dealii.h  main.cpp  solver.h
OTHER_CODES_FEM/minimalSurfaceEquation/: CMakeLists.txt  include_deal.h  main.cpp  solver.h
OTHER_CODES_FEM/problemaTaglioFlessione/: CMakeLists.txt  include_deal.h  solver.h
OTHER_CODES_FEM/scalableConvectionDiffusion/: CMakeLists.txt  Makefile  solver.h
OTHER_CODES_FEM/torsionProblem/: CMakeLists.txt  include_deal.h  main.cpp  solver.h
convectionDiffusion/: CMakeLists.txt  cmake_install.cmake  include_deal.h  main.cpp  pdeSolver.h  scalableConvectionDiffusion.cbp  solver.h
